<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.DetallesVenue"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDetalle"
        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryDarkColor"
        android:elevation="4dp"
        app:popupTheme="@style/Theme.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivFotoDetalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/detalle"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_venue" />

            <TextView
                android:id="@+id/tvNombreDetalle"
                style="@style/TextAppearance.AppCompat.Display2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvEstadoDetalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvPaisDetalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <GridView
                android:id="@+id/gridViewDetalles"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:numColumns="2"
                tools:ignore="NestedScrolling" />

            <Button
                android:id="@+id/btnCheckIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_boton_check_in" />

            <Button
                android:id="@+id/btnLike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_boton_like" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>
